Updating cors config